update readme, minor fix

--- a/question_answering.ipynb
+++ b/question_answering.ipynb
@@ -323,10 +323,10 @@
    "source": [
     "| . | TF-IDF | DE (100) | DE (50) | DE-no transform (100) |\n",
     "|--|--|--|--|--|\n",
-    "recall@1 (out of 2) | 0.763 | 0.698 | 0.714 | 0.777 |\n",
-    "recall@1 (out of 10) | 0.515 | 0.272 | 0.273 | 0.375 |\n",
-    "recall@2 (out of 10) | 0.609 | 0.428 | 0.446 | 0.575 |\n",
-    "recall@5 (out of 10) | 0.773 | 0.753 | 0.771 | 0.827 |\n",
+    "| recall@1 (out of 2) | 0.763 | 0.698 | 0.714 | 0.777 |\n",
+    "| recall@1 (out of 10) | 0.515 | 0.272 | 0.273 | 0.375 |\n",
+    "| recall@2 (out of 10) | 0.609 | 0.428 | 0.446 | 0.575 |\n",
+    "| recall@5 (out of 10) | 0.773 | 0.753 | 0.771 | 0.827 |\n",
     "\n",
     "This is the result of the experiment. The three models on the right are dual encoders and the last one has $M=I, b=0$ set in the last layer as described in the previous section. The number in the parentheses is the output dimension of the encoders.\n",
     "\n",
